--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -3489,6 +3489,12 @@
     <Content Include="Views\Shared\_AdminUnitTreeForAllocation.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\WoredaStockDistrAmhDPEnd.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\WoredaStockDistrAmhDPStart.cshtml" />
+    <Content Include="Web References\ReportPortal\CacheRefreshPlan5.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\ReportPortal\CacheRefreshPlan6.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
