--- a/Web/Web.config
+++ b/Web/Web.config
@@ -114,7 +114,7 @@
     <add key="elmah.mvc.route" value="elmah" />
     <add key="CatsReportUserName" value="Administrator" />
     <add key="CatsReportPassword" value="P@ssw0rd" />
-    <add key="CatsReportServerURL" value="http://192.168.10.251/Reports" />
+    <add key="CatsReportServerURL" value="http://192.168.10.251/reportserver" />
     <add key="aspnet:AllowAnonymousImpersonation" value="true" />
     
   
@@ -285,7 +285,7 @@
   <applicationSettings>
     <Cats.Properties.Settings>
       <setting name="Cats_ReportPortal_ReportingService2010" serializeAs="String">
-        <value>http://192.168.1.248:80/ReportServer/ReportService2010.asmx</value>
+        <value>http://192.168.10.251:80/ReportServer/ReportService2010.asmx</value>
       </setting>
     </Cats.Properties.Settings>
   </applicationSettings>
