--- a/Web/Web.config
+++ b/Web/Web.config
@@ -90,20 +90,14 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
-</connectionStrings>
+    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
-<!--<connectionStrings>
-    <add name="elmah-sql" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
 
+  </connectionStrings>
 
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
@@ -291,7 +285,7 @@
   <applicationSettings>
     <Cats.Properties.Settings>
       <setting name="Cats_ReportPortal_ReportingService2010" serializeAs="String">
-        value>http://192.168.10.251:80/ReportServer/ReportService2010.asmx</value>
+        <value>http://192.168.10.251:80/ReportServer/ReportService2010.asmx</value>
       </setting>
     </Cats.Properties.Settings>
   </applicationSettings>
