--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -917,6 +917,7 @@
     <Content Include="Areas\Hub\Views\ReceiveNew\_Commodities.cshtml" />
     <Content Include="Areas\Localization\Views\Language\EditTranslation.cshtml" />
     <Content Include="Areas\Logistics\Views\DispatchAllocation\AllocationAdjustment.cshtml" />
+    <Content Include="Areas\EarlyWarning\Views\ReliefRequisition\PromotThese.cshtml" />
     <None Include="Areas\Logistics\Views\DispatchAllocation\_AllocateProjectCode.cshtml" />
     <Content Include="Content\2013.1.219\Black\editor.png" />
     <Content Include="Content\2013.1.219\Black\imagebrowser.png" />
