--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -918,6 +918,7 @@
     <Content Include="Areas\Localization\Views\Language\EditTranslation.cshtml" />
     <Content Include="Areas\Logistics\Views\DispatchAllocation\AllocationAdjustment.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\ReliefRequisition\PromotThese.cshtml" />
+    <Content Include="Areas\Logistics\Views\DispatchAllocation\UpdateRequisition.cshtml" />
     <None Include="Areas\Logistics\Views\DispatchAllocation\_AllocateProjectCode.cshtml" />
     <Content Include="Content\2013.1.219\Black\editor.png" />
     <Content Include="Content\2013.1.219\Black\imagebrowser.png" />
