--- a/Services/Cats.Services.Common/App.config
+++ b/Services/Cats.Services.Common/App.config
@@ -67,6 +67,9 @@
             <setting name="TranferReceiptPlanWorkflow" serializeAs="String">
                 <value>TranferReceiptPlanWorkflow</value>
             </setting>
+            <setting name="BidPlanDetailActionWorkflow" serializeAs="String">
+                <value>BidPlanDetailActionWorkflow</value>
+            </setting>
         </Cats.Services.Common.ApplicationSettings>
     </applicationSettings>
 </configuration>
