--- a/Services/Cats.Services.Common/ApplicationSettings.settings
+++ b/Services/Cats.Services.Common/ApplicationSettings.settings
@@ -62,5 +62,8 @@
     <Setting Name="TranferReceiptPlanWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">TranferReceiptPlanWorkflow</Value>
     </Setting>
+    <Setting Name="BidPlanDetailActionWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">BidPlanDetailActionWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
