--- a/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
+++ b/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
@@ -737,6 +737,10 @@
       <Project>{e3c4d9fc-ad84-4e19-a475-6adbd134af68}</Project>
       <Name>Cats.Models.Security</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Cats.Models\Cats.Models.csproj">
+      <Project>{ABFB63D2-89FC-45BC-AA4E-5D9B21094B85}</Project>
+      <Name>Cats.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
