--- a/Models/Cats.Models/Cats.Models.csproj
+++ b/Models/Cats.Models/Cats.Models.csproj
@@ -91,6 +91,7 @@
     <Compile Include="DispatchDetail.cs" />
     <Compile Include="DistributionByAgeDetail.cs" />
     <Compile Include="HubStoreViewModel.cs" />
+    <Compile Include="IWorkflow.cs" />
     <Compile Include="Ledger.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -157,7 +158,6 @@
     <Compile Include="Mapping\ContactMap.cs" />
     <Compile Include="Mapping\WoredaStockDistributionDetailMap.cs" />
     <Compile Include="Mapping\DeliveryDetailMap.cs" />
- 
     <Compile Include="Mapping\DeliveryMap.cs" />
     <Compile Include="Mapping\WoredaStockDistributionMap.cs" />
     <Compile Include="Mapping\HrdDonorCoverageDetailMap.cs" />
