--- a/Web/Web.config
+++ b/Web/Web.config
@@ -88,12 +88,15 @@
   </log4net>
 
 
+
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+
+    <add name="elmah-sql" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=ANDYPC\SQL14;Initial Catalog=CatsDRMFSS1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+
 
   </connectionStrings>
 
