--- a/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
+++ b/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Contact.cs" />
     <Compile Include="HubFlowTemplate.cs" />
     <Compile Include="FreeStockStatus.cs" />
+    <Compile Include="IWorkflow.cs" />
     <Compile Include="Mapping\BusinessProcessMap.cs" />
     <Compile Include="Mapping\BusinessProcessStateMap.cs" />
     <Compile Include="Mapping\FlowTemplateMap.cs" />
